# rec_system

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  start.sh
.github/workflows/: deploy.yml
docs/: index.md
docs/getting-started/: index.md
docs/javascripts/: mathjax.js
docs/part10_serving_production/: index.md
docs/part11_evaluation_fairness/: index.md
docs/part12_research_frontiers/: index.md
docs/part1_foundations/: index.md
docs/part2_ctr_foundations/: index.md
docs/part3_retrieval/: index.md
docs/part4_ranking/: index.md
docs/part5_sequential_graph/: index.md
docs/part6_generative/: index.md
docs/part7_agent_interactive/: index.md
docs/part8_industrial_embeddings/: index.md
docs/part9_training_infra/: index.md
docs/stylesheets/: extra.css
getting-started/: index.html
notebooks/part1/: chapter_1.1_recommendation_problem.ipynb  chapter_1.2_interaction_data.ipynb  chapter_1.3_collaborative_filtering.ipynb  chapter_1.4_embeddings.ipynb  chapter_1.5_dl_building_blocks.ipynb  chapter_1.6_feature_engineering.ipynb  chapter_1.7_modern_pipeline.ipynb  (+1 more)
part10_serving_production/: index.html
part11_evaluation_fairness/: index.html
part12_research_frontiers/: index.html
part1_foundations/: index.html
part2_ctr_foundations/: index.html
part3_retrieval/: index.html
part4_ranking/: index.html
part5_sequential_graph/: index.html
part6_generative/: index.html
part7_agent_interactive/: index.html
part8_industrial_embeddings/: index.html
part9_training_infra/: index.html
(+249 files in other folders)
