[project]
name = "rec-system"
version = "0.1.0"
description = "Recommendation Systems: From Foundations to Production — A comprehensive learning resource covering CTR prediction, generative recommendation, and modern industrial systems"
readme = "docs/index.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

dependencies = [
    # Documentation site
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-jupyter>=0.25.0",

    # Jupyter
    "jupyter>=1.1.0",
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
    "nbconvert>=7.16.0",

    # Core ML
    "numpy>=1.26.0,<2",
    "matplotlib>=3.8.0",
    "torch>=2.1.0,<2.5",
    "transformers>=4.36.0,<4.46",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",

    # RecSys specific
    "faiss-cpu>=1.7.4",
    "gensim>=4.3.0",
    "networkx>=3.2.0",
    "torch-geometric>=2.5.0",

    # Utils
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
